--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>러닝 일지 RPG 웹앱</title>
   <link rel="stylesheet" href="styles.css" />
+  <script async src="https://docs.opencv.org/4.10.0/opencv.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
 </head>
 <body>
@@ -37,21 +38,31 @@
       <h2>기록 추가</h2>
       <div class="block">
         <h3>1) Garmin 스크린샷 OCR</h3>
-        <input type="file" id="imageInput" accept="image/*" />
-        <button id="runOcrBtn" type="button">OCR 실행</button>
+        <div class="toolbar">
+          <input type="file" id="imageInput" accept="image/*" />
+          <button id="runOcrBtn" type="button">OCR 실행</button>
+          <label class="inline"><input type="checkbox" id="debugToggle" />디버그 모드</label>
+        </div>
         <div id="ocrStatus" class="muted">대기 중</div>
         <progress id="ocrProgress" max="100" value="0"></progress>
       </div>
 
       <div class="block">
         <h3>2) OCR 텍스트 확인/수정</h3>
-        <textarea id="ocrText" rows="6" placeholder="OCR 결과가 여기에 표시됩니다."></textarea>
-        <button id="reparseBtn" type="button">재파싱</button>
+        <textarea id="ocrText" rows="8" placeholder="OCR 결과가 여기에 표시됩니다."></textarea>
+        <div class="toolbar">
+          <button id="reparseBtn" type="button">재파싱</button>
+          <button id="insertTemplateBtn" type="button">보정 템플릿 삽입</button>
+          <button id="injectSample1Btn" type="button">샘플 텍스트 1 주입</button>
+          <button id="injectSample2Btn" type="button">샘플 텍스트 2 주입</button>
+          <button id="injectSample3Btn" type="button">샘플 텍스트 3 주입</button>
+        </div>
         <div id="parseWarnings" class="warning-list"></div>
       </div>
 
       <div class="block">
         <h3>3) 수동 입력</h3>
+        <div id="candidatePanel" class="candidate-panel"></div>
         <form id="entryForm">
           <div class="form-grid">
             <label>날짜<input type="date" id="date" required /></label>
@@ -72,6 +83,13 @@
           <label>메모<textarea id="memo" rows="2" placeholder="예: 인터벌 1km x 5"></textarea></label>
           <button id="saveBtn" type="submit">4) 저장</button>
         </form>
+      </div>
+
+      <div class="block debug-panel hidden" id="debugPanel">
+        <h3>OCR 디버그</h3>
+        <canvas id="roiCanvas" width="360" height="640"></canvas>
+        <div id="pipelineThumbs" class="thumb-grid"></div>
+        <div id="debugCandidates" class="debug-candidates"></div>
       </div>
     </section>
 
